@@ -1,5 +1,10 @@
 2006-04-02  Adam Jackson  <ajax@freedesktop.org>
 
+	* os/xdmauth.c:
+	Coverity #82: Dead variable elimination.
+
+2006-04-02  Adam Jackson  <ajax@freedesktop.org>
+
 	* GL/glx/glxcmdsswap.c:
 	Coverity #271: Fix an unbelievably boneheaded NULL chase.
 
